# SimpleOS

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  LICENCE.txt  Makefile  README.md  SimpleOS.code-workspace  SimpleOS.ioc  SimpleOS.txt
Core/Src/: main.c
Core/Src/Backup/: main.c.bak
Docs/: Doxyfile
Libraries/utils/: utils.h
cmake/: gcc-arm-none-eabi.cmake
config/: board_config.h
simple_os/: simple_os.c  simple_os.h  simple_os_conf.h
